# ruuvitag-telegram-bot-and-logger

./: LICENSE  README.md
ruuvibot/: pyproject.toml
ruuvibot/ruuvibot/: __init__.py  ruuvibot.py  settings.example.json  settings.json
ruuvibot/ruuvibot/dbdata/: heatcontrol.sqlite
ruuvibot/tests/: test_ruuvibot.py
